--- a/slides.Rmd
+++ b/slides.Rmd
@@ -6,10 +6,10 @@ date: "July 27, 2022"
 output:
   xaringan::moon_reader:
     self_contained: true
-    chakra: assets/libs/remark-latest.min.js
-    css: assets/css/xaringan-themer.css
+    chakra: ./assets/libs/remark-latest.min.js
+    css: ./assets/css/xaringan-themer.css
     includes:
-      in_header: assets/header.html
+      in_header: ./assets/header.html
     nature:
       slideNumberFormat: "%current%"
       highlightStyle: github
