--- a/slides.Rmd
+++ b/slides.Rmd
@@ -191,15 +191,14 @@ I also got really into this internet phenomenon of oddly satisfying things-->
 --
 .pull-left[
 ### Smoothie!
-<video id="smoothie" controls muted height="400px" width="500px">
-<source src="assets/fig/smoothie_satisfying.mp4" type="video/mp4">
+<video id="smoothie" controls muted height="400px" width="500px"
+src="assets/fig/smoothie_satisfying.mp4" type="video/mp4"
 </video>
 ]
 --
 .pull-right[
 ### Tarts!
-<video id="tart-icing" controls muted height="400px" width="500px">
-<source src="assets/fig/tart_icing.mp4" type="video/mp4">
+<video id="tart-icing" controls muted height="400px" width="500px" src="assets/fig/tart_icing.mp4" type="video/mp4">
 </video>
 ]
 <!-- there is something about this type of video that just calms my soul -->
