organize satisfying media section; add stills

--- a/supporting-materials.Rmd
+++ b/supporting-materials.Rmd
@@ -241,7 +241,7 @@ wat +
 ```
 
 
-## Satisfying gif candidates  
+## Satisfying media    
 
 https://i.imgur.com/g5fnn24.mp4
 
@@ -270,6 +270,30 @@ https://i.imgur.com/g5fnn24.mp4
 <div style='position:relative; padding-bottom:calc(125.00% + 44px)'><iframe src='https://gfycat.com/ifr/NeedyGivingBufeo' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe></div>
 
 <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@mama_mila_/video/7031854261164117249" data-video-id="7031854261164117249" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@mama_mila_" href="https://www.tiktok.com/@mama_mila_">@mama_mila_</a> Add some cheer this year 🎁 <a title="christmas2021" target="_blank" href="https://www.tiktok.com/tag/christmas2021">#christmas2021</a> <a title="christmastiktok" target="_blank" href="https://www.tiktok.com/tag/christmastiktok">#christmastiktok</a> <a title="giftwrapping" target="_blank" href="https://www.tiktok.com/tag/giftwrapping">#giftwrapping</a> <a target="_blank" title="♬ original sound - ✰ Christmas sounds ✰" href="https://www.tiktok.com/music/original-sound-6755198984157186821">♬ original sound - ✰ Christmas sounds ✰</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+
+
+Cake decor
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/Satisfyingasfuck/comments/vb8ykv/the_way_colors_flow_is_so_satisfying/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
+
+### Stills
+
+dumplings!  
+
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/l3gct2/a_pan_of_freshly_made_dumplings/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="527" width="640" scrolling="no"></iframe>
+
+perfect tree and sidewalk  
+
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/rjb6yr/clean_straight_line/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="527" width="640" scrolling="no"></iframe>
+
+cranberry tart  
+
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/tvdddr/this_cranberry_tart/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="527" width="640" scrolling="no"></iframe>
+
+THIS ADORABLE CRAB  
+
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/vv6g4g/i_dont_know_why_but_this_image_is_so_pleasing/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="527" width="640" scrolling="no"></iframe>
+
+### Gift wrapping  
 
 https://pin.it/5J7DmHS - brown, slow wrapping
 
