--- a/slides.Rmd
+++ b/slides.Rmd
@@ -60,7 +60,8 @@ seaweed <- palette %>% filter(family == "seaweed", level == 25)
 ```
 ```{r xaringan-banner, echo=FALSE}
 xaringanExtra::use_banner(
-  bottom_right = "lizroten.com/oddly",
+  bottom_right = '<a href="https://lizroten.com/oddly" target="_blank" style="color: #5A6E73">lizroten.com/oddly</a>',
+  bottom_left = "rstudio::conf(2022)",
   exclude = c("title-slide",
               "inverse"))
 ```
@@ -127,12 +128,17 @@ style_duo_accent(
     
     ".xe-banner" = list(
       "color" = midnight$code,
-      "text-decoration" = "underline"
+      "font-size" = "0.65em"
     ),
-    ".inverse > .xe-banner" = list(
-      "color"  = "transparent"
-    )
     
+    ".inverse > .xe-banner" = list(
+      "color" = "transparent"
+    ),
+    ".inverse a, .inverse a .xe-banner  > code" =
+      list(
+        "color" = "transparent !important",
+        "text-decoration" = "none"
+      )
   ),
   title_slide_background_image = "../../supporting-materials_files/figure-html/watercolor-plot-1.png",
   # etc.
@@ -202,7 +208,7 @@ src="assets/fig/smoothie_satisfying.mp4" type="video/mp4">
 ---
 <!-- there is something about this type of video that just calms my soul -->
 
- I decided to take my truck,  
+I decided to take my truck,  
 .center[
 <br>
 <br>
@@ -294,7 +300,7 @@ proposed_conflation_match <- purrr::map_dfr(
 
 
 
-  
+
 ]
 ]
 
@@ -605,7 +611,7 @@ class: center
 <img src="assets/fig/mndot_4plus_single.png" alt="A black and white line art illustration of a large truck" style="transform: scaleX(-1);">  
 
 --
-  
+
 but everyone in my office knows about this documentation
 
 --
@@ -616,7 +622,7 @@ and I'm very proud of my work.
 class: center, middle
 # Thanks!  
 
-https://lizroten.com/oddly
+[lizroten.com/oddly](https://lizroten.com/oddly)
 
 ---
 class: end-matter
@@ -637,9 +643,9 @@ class: end-matter
 #### Multimedia sources
 <ul style="font-size: 15pt; text-align: left;">
 
-- Stitch https://media.giphy.com/media/BbQrNk32kD064/giphy.gif 
 - Mini tart icing https://gfycat.com/needygivingbufeo, as performed by [@jeanimbert](https://www.instagram.com/jeanimbert/?hl=en) 
 - Satisfying smoothie from [fenitas.nl](https://www.tiktok.com/@fenitas.nl/video/7093892979659738373)
+- Tiny crab with tiny fish via [Reddit](https://www.reddit.com/r/oddlysatisfying/comments/vv6g4g/i_dont_know_why_but_this_image_is_so_pleasing/)
 - Truck illustration,  MnDOT vehicle classification scheme. Available [here](https://www.dot.state.mn.us/traffic/data/reports/vc/Vehicle_Classification_Scheme.pdf)
 - Rainbow illustration: Oren neu dag, [CC BY-SA 3.0](https://creativecommons.org/licenses/by-sa/3.0), via Wikimedia Commons
 - Emoji images (Microsoft version) via [Emojipedia](https://emojipedia.org/)
