additional reddit posts

--- a/supporting-materials.Rmd
+++ b/supporting-materials.Rmd
@@ -272,6 +272,18 @@ https://i.imgur.com/g5fnn24.mp4
 <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@mama_mila_/video/7031854261164117249" data-video-id="7031854261164117249" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@mama_mila_" href="https://www.tiktok.com/@mama_mila_">@mama_mila_</a> Add some cheer this year 🎁 <a title="christmas2021" target="_blank" href="https://www.tiktok.com/tag/christmas2021">#christmas2021</a> <a title="christmastiktok" target="_blank" href="https://www.tiktok.com/tag/christmastiktok">#christmastiktok</a> <a title="giftwrapping" target="_blank" href="https://www.tiktok.com/tag/giftwrapping">#giftwrapping</a> <a target="_blank" title="♬ original sound - ✰ Christmas sounds ✰" href="https://www.tiktok.com/music/original-sound-6755198984157186821">♬ original sound - ✰ Christmas sounds ✰</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
 
 
+glazing a waxed pot
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/w4cpi3/the_way_the_glaze_runs_off_the_wax_resist_pattern/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
+
+product display unit
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/w3po0m/a_product_display_unit/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
+
+trucks parking on a ship
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/rhp1xg/these_trailer_trucks_parking_on_a_ship_is_so/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
+
+brick laying 
+<iframe id="reddit-embed" src="https://www.redditmedia.com/r/oddlysatisfying/comments/w2r30e/never_knew_brick_laying_is_this_satisfying/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
+
 Cake decor
 <iframe id="reddit-embed" src="https://www.redditmedia.com/r/Satisfyingasfuck/comments/vb8ykv/the_way_colors_flow_is_so_satisfying/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="620" width="640" scrolling="no"></iframe>
 
