add outline section

--- a/slides.Rmd
+++ b/slides.Rmd
@@ -238,6 +238,16 @@ I decided to take my truck, and make it the best truck
 
 
 ---
+## 1. 🔥 Assess the damage 
+
+--
+## 2. 📄 Do and document  
+
+--
+## 3. 🎁 Leave a gift 
+
+
+---
 class: inverse center middle
 
 # Assess the damage
