--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -15,6 +15,14 @@
   url = {https://www.R-project.org/},
 }
 
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.4.4},
+  url = {https://CRAN.R-project.org/package=devtools},
+}
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
@@ -66,15 +74,23 @@
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2022},
-  note = {R package version 3.1.7},
+  note = {R package version 3.1.8},
   url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett},
+  year = {2022},
+  note = {R package version 2.1.6},
+  url = {https://CRAN.R-project.org/package=usethis},
 }
 
 @Manual{R-xaringanExtra,
   title = {xaringanExtra: Extras and Extensions for xaringan Slides},
   author = {Garrick Aden-Buie and Matthew T. Warkentin},
   year = {2022},
-  note = {R package version 0.6.0},
+  note = {R package version 0.7.0},
   url = {https://CRAN.R-project.org/package=xaringanExtra},
 }
 
